<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FF"
    tools:context=".SecondActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_name"
            android:inputType="textMultiLine"
            style="@style/AnswerText"
            android:paddingTop="16dp" />

        <TextView
            android:id="@+id/direction"
            style="@style/QuestionText"
            android:paddingBottom="16dp"
            android:layout_below="@id/name"
            android:text="@string/answer_the_following_questions"
             />
        <TextView
            android:id="@+id/question1"
            style="@style/QuestionText"
            android:layout_below="@id/direction"
            android:text="@string/_1_what_is_the_output_of_the_following_code"
            />
        <TextView
            android:id="@+id/question1.1"
            style="@style/QuestionText"
            android:layout_below="@id/question1"
            android:text="@string/print_4_2"
            />
        <EditText
            android:id="@+id/answer1"
            android:layout_below="@id/question1.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_answer"
            android:inputType="textMultiLine"
            style="@style/AnswerText"
            android:paddingTop="16dp" />
        <TextView
            android:id="@+id/question2"
            style="@style/QuestionText"
            android:paddingBottom="16dp"
            android:layout_below="@id/answer1"
            android:text="@string/question_2"
            />
        <LinearLayout
            android:id="@+id/answersQuiz3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/question2"
            style="@style/AnswerText"
            >
                <CheckBox
                    android:id="@+id/checkboxAnswer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:paddingLeft="24dp"
                    android:paddingRight="54dp"
                    android:textSize="@dimen/checkBox_TextSize"
                    />
                <CheckBox
                    android:id="@+id/checkboxAnswer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a1"
                    android:paddingLeft="24dp"
                    android:textSize="@dimen/checkBox_TextSize"
                    />
                <CheckBox
                    android:id="@+id/checkboxAnswer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a2"
                    android:paddingLeft="24dp"
                    android:paddingRight="54dp"
                    android:textSize="@dimen/checkBox_TextSize"
                    />
                <CheckBox
                    android:id="@+id/checkboxAnswer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a3"
                    android:paddingLeft="24dp"
                    android:textSize="@dimen/checkBox_TextSize"
                    />
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/question3"
            android:orientation="vertical"
            android:layout_below="@id/answersQuiz3"
            >
            <TextView
                style="@style/QuestionText"
                android:paddingBottom="16dp"
                android:text="@string/_3_given_the_following_code"
                />
            <TextView
                style="@style/QuestionText"
                android:paddingBottom="16dp"
                android:text="@string/Quiz3_code"
                />
            <TextView
                style="@style/AnswerText"
                android:paddingBottom="16dp"
                android:text="@string/Quiz3"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/question3Answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/question3"
            >
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AnswerText"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/radioButton1"
                    style="@style/AnswerText"
                    android:text="@string/_299"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    />

                <RadioButton
                    android:id="@+id/radioButton2"
                    style="@style/AnswerText"
                    android:text="@string/_298"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    />
                <RadioButton
                    android:id="@+id/radioButton3"
                    style="@style/AnswerText"
                    android:text="@string/_301"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    />
                <RadioButton
                    android:id="@+id/radioButton4"
                    style="@style/AnswerText"
                    android:text="@string/_300"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/question3Answers"
            android:orientation="vertical"
            >
            <TextView
                style="@style/QuestionText"
                android:paddingBottom="16dp"
                android:text="@string/_4_what_does_this_code_print"
                />
            <TextView
                style="@style/QuestionText"
                android:paddingBottom="16dp"
                android:text="@string/code"
                />
            <EditText
                android:id="@+id/answer4EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_your_answer"
                android:inputType="textMultiLine"
                style="@style/AnswerText"
                />
        </LinearLayout>
        <Button
            android:id="@+id/submitAnswers"
            style="@style/buttonStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/question4"
            android:text="@string/submit_answers" />


        <LinearLayout
            android:id="@+id/answerSummary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/submitAnswers"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            style="@style/AnswerText"
            >
            <!--Display text input by user-->
            <TextView
                android:layout_below="@id/submitAnswers"
                android:id="@+id/answeSummary"
                android:text="@string/answer_summary"
                android:textAllCaps="true"
                android:paddingBottom="@dimen/paddingBottom"
                android:paddingTop="@dimen/padding_top"
                style="@style/CustomText"
                />

            <TextView
                android:id="@+id/answer_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingBottom="@dimen/paddingBottom"
                />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
